[package]
name = "AHC011"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "=0.7.3", features = ["small_rng"] }
rand_pcg = "0.2.1"
rand_chacha = "=0.2.2"
proconio = { version = "=0.3.6", features = ["derive"] }
svg = "0.9.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "solution_annealing"
path = "src/solution_annealing.rs"